e_metrobus/static/sass/_dashboard.scss
.dashboard {
    height: calc(100vh - 9rem); // height is about the space on screen between top and bottom navigations
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;

  &__category {
    margin-bottom: 2rem;
    height: 10rem;
    position: relative;

    @media screen and (min-height: 650px) {
      margin-top: 3vh;
      margin-bottom: 7vh;
    }
  }

  &__img {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  &__img img {
    height: 5rem;
  }

  &__header {
    transform: translateY(-.5rem);
    font-weight: 700;
  }
  &__info {
    position: absolute;
    top: 16rem;
    background-color: $secondary-color;
    color: $white;
    padding: 1rem 0;

    p {
      margin-right: 2.5rem;
      margin-left: 1rem;
      margin-bottom: 0;
      text-align: left;
    }
    button {
      color: $white;
      height: 1rem;
      width: 1rem !important;
    }
    button:hover {
      color: $white;
    }
  }
}
#close-button {
  color: $white;
  border: none;
  background: none;
}

